[package]
name = "canon_d"
version = "0.1.0"
edition = "2021"
description = "Canonical serialization layer for content-addressed substrates"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
thiserror = "2"

ket-cas = { git = "https://github.com/nickjoven/ket.git", optional = true }
ket-dag = { git = "https://github.com/nickjoven/ket.git", optional = true }

[features]
default = []
ket = ["ket-cas", "ket-dag"]

[dev-dependencies]
ket-cas = { git = "https://github.com/nickjoven/ket.git" }
ket-dag = { git = "https://github.com/nickjoven/ket.git" }
